--- a/appEngine/cloudbuild.yaml
+++ b/appEngine/cloudbuild.yaml
@@ -1,12 +1,13 @@
 steps:
-- id: 'Install node_modules'
+- id: 'install npm'
   name: 'gcr.io/cloud-builders/npm'
   args: ['install']
 
-- id: 'Build'
-  name: 'gcr.io/cloud-builders/npm'
-  args: ['run', 'build']
+- id: 'build docker image'
+  name: 'gcr.io/cloud-builders/docker'
+  args: ['build', '--tag=gcr.io/$PROJECT_ID/hello_npm', '.']
+images: ['gcr.io/$PROJECT_ID/hello_npm']
 
-- id: 'Deploy'
-  name: 'gcr.io/prasad-gcp3-project/appEngine'
-  args: ['deploy', '-P', 'myAppEngine', '--non-interactive']
+- id: 'deploy'
+  name: 'gcr.io/cloud-builders/gcloud'
+  args: ['app', 'deploy', '--image-url=gcr.io/$PROJECT_ID/hello_npm']
