--- a/appEngine/stageCloudBuild.yaml
+++ b/appEngine/stageCloudBuild.yaml
@@ -5,7 +5,7 @@ steps:
 
 - id: 'build docker image'
   name: 'gcr.io/cloud-builders/docker'
-  args: ['build', 'gcr.io/$PROJECT_ID/hello_npm', '.']
+  args: ['build', '-t','gcr.io/$PROJECT_ID/hello_npm', '.']
 
 - id: 'push to registry'
   name: 'gcr.io/cloud-builders/docker'
