--- a/appEngine/cloudbuild.yaml
+++ b/appEngine/cloudbuild.yaml
@@ -5,5 +5,5 @@ steps:
 
 - id: 'deploy app'
   name: "gcr.io/cloud-builders/gcloud"
-  args: ["app", "deploy"]
+  args: ['app', 'deploy', 'app.yaml']
 timeout: "1600s"
